--- a/localisation/AML_indolemurian_shared_tree_l_english.yml
+++ b/localisation/AML_indolemurian_shared_tree_l_english.yml
@@ -1,3 +1,103 @@
 ﻿l_english:
- mandalism.1.t:0 "Mandalists gain a foothold in the countryside"
- mandalism.1.d:0 "description goes here lol"
+ INDOLEM2_the_hooks:0 "Consolidation"
+ INDOLEM2_the_hooks_desc:0 "One last push from the government should be enough to consolidate the gains made during these long months of strife."
+ INDOLEM2_work_with_capitalists:0 "Encroaching Capitalists"
+ INDOLEM2_work_with_capitalists_desc:0 "The devastating civil strife is coming to an end. The democratic capitalist forces have prevailed. Now we much rebuild our economy and prosper!"
+ INDOLEM2_generous_loans:0 "Generous Loans"
+ INDOLEM2_generous_loans_desc:0 "By extending generous subsidies and loans to the businessmen in our nation we can ensure at many new opportunities are available for the growth of our economy."
+ INDOLEM2_stingy_loans:0 "Stingy Loans"
+ INDOLEM2_stingy_loans_desc:0 "The capitalists will prosper or fail based on their own merits, not due to governmental bailouts. By making the strong prosper based on their own efforts we can best ensure the health of our economy."
+ INDOLEM2_dam_rivers:0 "Dam Minor Rivers"
+ INDOLEM2_dam_rivers_desc:0 "If we dam some minor rivers in our nation we can free up some lands for use by the industrialists. Unfortunately, there will be some traditional communities whose lands will be lost."
+ INDOLEM2_more_oil_plants:0 "Oil Plants"
+ INDOLEM2_more_oil_plants_desc:0 "Our economic policies are bearing fruit! A group of venture capitalists have presented a proposal to build synthetic oil plants in some of our provinces."
+ INDOLEM2_industrial_gains:0 "Industrial Gains"
+ INDOLEM2_industrial_gains_desc:0 "Our national focus must be on increasing the means of production! We will build more production lines and will grow our manufacturing sector."
+ INDOLEM2_industrial_improvements:0 "Industrial Improvements"
+ INDOLEM2_industrial_improvements_desc:0 "With our new industries working we can now turn our attention to streamlining the production lines for greater efficiency."
+ INDOLEM2_consumer_factories:0 "Industrial Improvements"
+ INDOLEM2_consumer_factories_desc:0 "If our people do not have enough goods to keep them happy and distracted then we create a breeding ground for unrest and revolutionaries. By incresing our consumer goods lines we can help to stabilize the nation and make ourselves rich!"
+ INDOLEM2_dockyard_construction:0 "Industrial Improvements"
+ INDOLEM2_dockyard_construction_desc:0 "One of the most important sectors of a growing economy is the shipping companies. We must ensure our docks are replete with ships!"
+ INDOLEM2_military_factories:0 "Industrial Improvements"
+ INDOLEM2_military_factories_desc:0 "The civil strife of recent times has proven that a strong military is necessary for safety, both from foreign powers but also from internal influences that would try to destroy our great nation."
+ INDOLEM2_old_roads_new_airfields:0 "Old Roads, New Airfields"
+ INDOLEM2_old_roads_new_airfields_desc:0 "Our infrastructure improvements have shown that some of our old roads are located in places that are not good for trade. By converting some of these old roads into airfields we can improve our military capabilities and bring development to all corners of our nation."
+ INDOLEM2_invest_public_research:0 "Invest in Public Research"
+ INDOLEM2_invest_public_research_desc:0 "The academics have approached us with a proposal. If we fund public research initiatives we will not only bring our nation out of ignorance, but we will further our technological development and benefit our industry."
+ INDOLEM2_production_improvements:0 "Production Improvements"
+ INDOLEM2_production_improvements_desc:0 "The current research shows that with a few changes we could make our production lines even more efficient."
+ INDOLEM2_construction_improvements:0 "Construction Improvements"
+ INDOLEM2_construction_improvements_desc:0 "The current research shows that by changing the way we layout our construction projects we can use fewer materials and make the end results much stronger."
+ INDOLEM2_computing_technology:0 "Computing Technology"
+ INDOLEM2_computing_technology_desc:0 "Our scientists have described an advancement on the 'Difference Engine' which would allow for a significant increase in computing power, allowing for more efficient research."
+ INDOLEM2_early_synthetic_materials:0 "Early Synthetic Materials"
+ INDOLEM2_early_synthetic_materials_desc:0 "If we use artifical materials in our construction and research we may be able to overcome some of the serious limitations in natural materials, like supply or stability over time."
+ INDOLEM2_synthetic_insulators:0 "Synthetic Insulators"
+ INDOLEM2_synthetic_insulators_desc:0 "Our scientists have discovered some artifical materials that make excellent heat and electrical insulators. We should find as many applications for these new materials as possible!"
+ INDOLEM2_oil_refining:0 "Advanced Oil Refining"
+ INDOLEM2_oil_refining_desc:0 "By focusing our research efforts on refining the by-products of oil refining we are sure that we can develop new uses for them."
+ INDOLEM2_radar_insights:0 "RADAR Insights"
+ INDOLEM2_radar_insights_desc:0 "Narrow bandwidths of the electromagnetic spectrum can be used not only for communication but also for observing far away phenomena. Brilliant!"
+ INDOLEM2_enhanced_air:0 "Enhanced Air Control"
+ INDOLEM2_enhanced_air_desc:0 "By combining RADAR information into our planning and safety protocols we can not only improve our air safety, but we can effectively improve the effectiveness of our aerial forces."
+ INDOLEM2_round_up_mandalists:0 "Round Up the Mandalists"
+ INDOLEM2_round_up_mandalists_desc:0 "Re-education or incarceration are the only ways to deal with these backwards Mandalists."
+ INDOLEM2_reestablish_capitalist_ties:0 "Reestablish Capitalist Ties"
+ INDOLEM2_reestablish_capitalist_ties_desc:0 "For our nation to prosper we must bring back capitalist investments."
+ INDOLEM2_capitalist_immigrants:0 "Encourage Capitalist Immigrants"
+ INDOLEM2_capitalist_immigrants_desc:0 "Our nation should be a beacon for democratic and capitalist principles. Our neighbors have also struggled with their own national identities, leading some of their citizenry feeling rejected. We should invite these people to our nation to strengthen our economy."
+ INDOLEM2_encourage_local_business:0 "Encourage Local Business"
+ INDOLEM2_encourage_local_business_desc:0 "Our nation should support our local citizenry in their efforts to expand our economy. A few well placed loans, some tax breaks, and some targeted deregulation will surely improve things!"
+ INDOLEM2_invite_american_investors:0 "Invite American Investors"
+ INDOLEM2_invite_american_investors_desc:0 "The Americans know a thing or two about using their money. We should ensure that our regulations are friendly to the American Investors' sensibilities."
+ INDOLEM2_invite_european_investors:0 "Invite European Investors"
+ INDOLEM2_invite_european_investors_desc:0 "Old money means a lot of money. We must figure out how to tap into the deep, deep pockets of the Europeans."
+ INDOLEM2_no_foreigners:0 "No Foreign Investment"
+ INDOLEM2_no_foreigners_desc:0 "If we are to prosper as a country and keep ourselves free of the colonial influences of the Americans and Europeans then we cannot accept their tainted investments."
+ INDOLEM2_seize_industrial_wealth:0 "Seize Industrial Wealth"
+ INDOLEM2_seize_industrial_wealth_desc:0 "The evils of capitalism are myriad. We must reclaim the property of the Mandalam from the greedy hands of capitalists."
+ INDOLEM2_patrol_border:0 "Patrol the Borders"
+ INDOLEM2_patrol_border_desc:0 "Some of the selfish capitalists are attempting to flee the righteous dominion of the Mandalam. We must increase the border patrols to stop them from leaving and taking the property of the Mandalam!"
+ INDOLEM2_limit_political_participation:0 "Limit Political Participation"
+ INDOLEM2_limit_political_participation_desc:0 "The ancient records all agree: the Mandalam should have the ultimate say in how the community is run, from top to bottom. Politics is best left to the locally elected Mandalam."
+ INDOLEM2_purge_capitalists:0 "Purge the Capitalists"
+ INDOLEM2_purge_capitalists_desc:0 "The Mandalam have spoken and their will is clear: the capitalists and their disregard for the will of the people must be eliminated. No regulatory vestiges of the evil and foreign capitalist system must remain."
+ INDOLEM2_destruction_capitalist_symbols:0 "Destroy Capitalist Symbols"
+ INDOLEM2_destruction_capitalist_symbols_desc:0 "It is not just the capitalist system that is poisonous to the people of the Mandalam, this poison also extends to the symbols of capitalism that remain lodged like a sliver in their eye. We must eliminate evil capitalist symbols like paper money, Western clothing, and foreign foods."
+ INDOLEM2_founding_documents:0 "The Founding Documents"
+ INDOLEM2_founding_documents_desc:0 "By codifying and regularizing the various Mandalist systems, which are all correct but could be clarified, we can ensure a smooth transition to the control of the Mandalam."
+ INDOLEM2_public_farmlands:0 "Public Farmlands"
+ INDOLEM2_public_farmlands_desc:0 "How can land belong to one person? It is obviously there to be administered beneficially and effectively by the local Mandala."
+ INDOLEM2_public_factories:0 "Public Factories"
+ INDOLEM2_public_factories_desc:0 "One of the most poisonous and pervasive ideas of the capitalists is that of private ownership. All goods exist for the benefit of the community, and must be administered by the voice of the local Mandala."
+ INDOLEM2_redistribute_land:0 "Redistribute Land"
+ INDOLEM2_redistribute_land_desc:0 "By reenforcing the rule of the Mandalam we can improve the efficiency of our means of production, and strengthen the adherence to the mandates of the Mandalam."
+ INDOLEM2_reorganize_government:0 "Reorganize the Government"
+ INDOLEM2_reorganize_government_desc:0 "By having the Mandalam rule locally we have improved the lives of the people, but there are still some difficulties in administrating the nation as a whole. We must now create the Greater Mandala, a Mandala of the Mandalam, to administer the needs of the nation."
+ INDOLEM2_establish_local_authorities:0 "Establish Local Authorities"
+ INDOLEM2_establish_local_authorities_desc:0 "Currently the Mandalam are controlling the means of production, but a difficulty has arisen with their enforcement authority. By devolving some policing powers to the local Mandalam we can improve their efficiency."
+ INDOLEM2_local_production:0 "Strengthen Local Production"
+ INDOLEM2_local_production_desc:0 "Some Mandalam have an advantage because their stewardship includes areas where evil capitalists had previously built factories. We must invest in those Mandalam that do not have these advantages to strengthen them."
+ INDOLEM2_entice_resource_collection:0 "Encourage Resource Collection"
+ INDOLEM2_entice_resource_collection_desc:0 "Experience has now shown the Greater Mandala that some areas are better suited for producing raw materials, while production of goods is best left to other Mandalam."
+ INDOLEM2_compensation_from_rich:0 "Compensation from the Rich"
+ INDOLEM2_compensation_from_rich_desc:0 "The more well-to-do Mandalam must be directed to bring their prosperity to all Mandalam. This may upset some areas, but the Greater Mandala has directed and they shall obey."
+ INDOLEM2_designate_regional:0 "Designate Regional Mandalam"
+ INDOLEM2_designate_regional_desc:0 "While the rightness of the Greater Mandala cannot be disputed, there are some that suggest that the creation of some Lesser Mandalam could improve the efficiency of governance."
+ INDOLEM2_regional_tax:0 "Enact Regional Taxation"
+ INDOLEM2_regional_tax_desc:0 "While taxation may seem like a tool of the evil capitalists our historians have discovered that taxation is something the Mandalam have done throughout history. The collection of taxes can be facilitated by the creation and printing of portable, durable fabric currency."
+ INDOLEM2_statues:0 "Mandalist Iconography"
+ INDOLEM2_statues_desc:0 "The Greater Mandala has determined that the production of Mandalist iconography will have a beneficial effect, uniting the people to the Mandalam, and binding the Mandalam more tightly together in the face of foreign influences."
+ INDOLEM2_the_national:0 "National Mandalist Focus"
+ INDOLEM2_the_national_desc:0 "The Greater Mandala understands that no one knows the people like the local Mandalam, but by standardizing the messages from the Mandalam we can bind the people to the Greater Mandala, too."
+ INDOLEM2_force_open_gold:0 "Precious Metal Reserves"
+ INDOLEM2_force_open_gold_desc:0 "The Greater Mandala requires the cooperation of the Mandalam to administer the nation effectively. By centralizing the Mandalam's previous metal reserves this will allow the Greater Mandalam to better administer and control the nation."
+ INDOLEM2_deal_with_abandon_factories:0 "Reactivate Factories"
+ INDOLEM2_deal_with_abandon_factories_desc:0 "The flight of the evil capitalists, and through some oversights on the parts of some Mandalam, we have factories that are sitting idle. We must arrange for the people to have work!"
+ INDOLEM2_gurillia_required_reading:0 "Required Guerilla Readings"
+ INDOLEM2_gurillia_required_reading_desc:0 "We are proud of, and depend heavily upon, our valiant Mandalist fighters. But some doctrinal disputes have begun to arise which must be quashed. We will standardize the educational and propaganda materials provided to our fighters to keep them fighting the real enemy, capitalists, and not each other."
+ INDOLEM2_join_kalari:0 "Join the Kalari Mandalam"
+ INDOLEM2_join_kalari_desc:0 "We have made great strides to bring back the Mandalist system, but now we should take the final step; joining with our Kalari brethren into a single, true system of governance for all of the Indolemurian peoples."
+ INDOLEM2_consolidate_orange_wave:0 "Consolidate the Orange Wave"
+ INDOLEM2_consolidate_orange_wave_desc:0 "Mandalists, locally and abroad, must unite to drive off the foreign ideas and invaders who so blithely desecrate our lands. A united force of Mandalists will righteously bring this glorious future to our people!"
