--- a/localisation/AML_indolemurian_shared_tree_l_english.yml
+++ b/localisation/AML_indolemurian_shared_tree_l_english.yml
@@ -1,4 +1,35 @@
 ﻿l_english:
+ 
+#Ideas
+ LEM_construction_gains:0 ""
+ LEM_construction_gains_desc:0 ""
+ LEM_industrial_gains:0 ""
+ LEM_industrial_gains_desc:0 ""
+ LEM_industrial_improvements:0 ""
+ LEM_industrial_improvements_desc:0 ""
+ LEM_production_improvements:0 ""
+ LEM_production_improvements_desc:0 ""
+ LEM_industrial_research:0 ""
+ LEM_industrial_research_desc:0 ""
+ LEM_air_power:0 ""
+ LEM_air_power_desc:0 ""
+ LEM_mandal:0 ""
+ LEM_mandal_desc:0 ""
+ LEM_local_mandal:0 ""
+ LEM_local_mandal_desc:0 ""
+ LEM_production_mandal:0 ""
+ LEM_production_mandal_desc:0 ""
+ LEM_resource_mandal:0 ""
+ LEM_resource_mandal_desc:0 ""
+ LEM_national_mandal:0 ""
+ LEM_national_mandal_desc:0 ""
+ LEM_partisan_mandal:0 ""
+ LEM_partisan_mandal_desc:0 ""
+ LEM_spy_union:0 ""
+ LEM_spy_union_desc:0 ""
+ LEM_spy_religion:0 ""
+ LEM_spy_religion_desc:0 ""
+ #Tree
  INDOLEM2_the_hooks:0 "Consolidation"
  INDOLEM2_the_hooks_desc:0 "One last push from the government should be enough to consolidate the gains made during these long months of strife."
  INDOLEM2_work_with_capitalists:0 "Encroaching Capitalists"
