--- a/localisation/AML_indolemurian_shared_tree_l_english.yml
+++ b/localisation/AML_indolemurian_shared_tree_l_english.yml
@@ -1,34 +1,34 @@
 ﻿l_english:
  
 #Ideas
- LEM_construction_gains:0 ""
- LEM_construction_gains_desc:0 ""
- LEM_industrial_gains:0 ""
- LEM_industrial_gains_desc:0 ""
- LEM_industrial_improvements:0 ""
- LEM_industrial_improvements_desc:0 ""
- LEM_production_improvements:0 ""
- LEM_production_improvements_desc:0 ""
- LEM_industrial_research:0 ""
- LEM_industrial_research_desc:0 ""
- LEM_air_power:0 ""
- LEM_air_power_desc:0 ""
- LEM_mandal:0 ""
- LEM_mandal_desc:0 ""
- LEM_local_mandal:0 ""
- LEM_local_mandal_desc:0 ""
- LEM_production_mandal:0 ""
- LEM_production_mandal_desc:0 ""
- LEM_resource_mandal:0 ""
- LEM_resource_mandal_desc:0 ""
- LEM_national_mandal:0 ""
- LEM_national_mandal_desc:0 ""
- LEM_partisan_mandal:0 ""
- LEM_partisan_mandal_desc:0 ""
- LEM_spy_union:0 ""
- LEM_spy_union_desc:0 ""
- LEM_spy_religion:0 ""
- LEM_spy_religion_desc:0 ""
+ LEM_construction_gains:0 "Construction Gains"
+ LEM_construction_gains_desc:0 "Great improvements have been made to our national construction corps."
+ LEM_industrial_gains:0 "Industrial Gains"
+ LEM_industrial_gains_desc:0 "Our industry is beginning to develop at an ever increasing pace."
+ LEM_industrial_improvements:0 "Industrial Improvements"
+ LEM_industrial_improvements_desc:0 "Significant improvements to our industrial capacity have been made."
+ LEM_production_improvements:0 "Production Improvements"
+ LEM_production_improvements_desc:0 "Production lines across the nation are more efficient now thanks to our research."
+ LEM_industrial_research:0 "Industrial Research"
+ LEM_industrial_research_desc:0 "By focusing on our industrial capabilities our scientists are aiding the nation."
+ LEM_air_power:0 "Increased Air Control"
+ LEM_air_power_desc:0 "By integrating RADAR and the hard lessons of our early airforce into one we can drastically improve our air capabilities."
+ LEM_mandal:0 "The Mandalam"
+ LEM_mandal_desc:0 "The village councils, or the Mandalam, are a time honored tradition of our people. We must focus on the strength of the Mandalam to protect our people and help them prosper."
+ LEM_local_mandal:0 "Local Mandalam"
+ LEM_local_mandal_desc:0 "Without sufficient power even the wisest of the Mandalam will be able to do nothing. We must ensure that the local Mandalam have the authority they require."
+ LEM_production_mandal:0 "Production-Focused Mandalam"
+ LEM_production_mandal_desc:0 "Some dig, some build, and some fight. The production-focused Mandalam will allow the nation to prosper!"
+ LEM_resource_mandal:0 "Resource-Focused Mandalam"
+ LEM_resource_mandal_desc:0 "By focusing certain Mandalam on the production of resources we can improve the efficiency of others, bringing about greater good for the people."
+ LEM_national_mandal:0 "The Greater Mandala"
+ LEM_national_mandal_desc:0 "The Mandalam across the nation now contribute to a greater national good, the Greater Mandala."
+ LEM_partisan_mandal:0 "Partisan Mandalam"
+ LEM_partisan_mandal_desc:0 "Despite the efforts of the Greater Mandala, there remain some partisan Mandalam who do not wish to follow the national trends."
+ LEM_spy_union:0 "Union Infiltration"
+ LEM_spy_union_desc:0 "With the unions solidly under our control we can ensure the safety and prosperity of the nation."
+ LEM_spy_religion:0 "Religious Group Infiltration"
+ LEM_spy_religion_desc:0 "No corner of the nation is beyond our reach. By shining light even into the most sacred corners we can prevent the rise of rebel groups."
  #Tree
  INDOLEM2_the_hooks:0 "Consolidation"
  INDOLEM2_the_hooks_desc:0 "One last push from the government should be enough to consolidate the gains made during these long months of strife."
@@ -46,11 +46,11 @@
  INDOLEM2_industrial_gains_desc:0 "Our national focus must be on increasing the means of production! We will build more production lines and will grow our manufacturing sector."
  INDOLEM2_industrial_improvements:0 "Industrial Improvements"
  INDOLEM2_industrial_improvements_desc:0 "With our new industries working we can now turn our attention to streamlining the production lines for greater efficiency."
- INDOLEM2_consumer_factories:0 "Industrial Improvements"
+ INDOLEM2_consumer_factories:0 "Consumer Factories"
  INDOLEM2_consumer_factories_desc:0 "If our people do not have enough goods to keep them happy and distracted then we create a breeding ground for unrest and revolutionaries. By incresing our consumer goods lines we can help to stabilize the nation and make ourselves rich!"
- INDOLEM2_dockyard_construction:0 "Industrial Improvements"
+ INDOLEM2_dockyard_construction:0 "Dockyard Construction"
  INDOLEM2_dockyard_construction_desc:0 "One of the most important sectors of a growing economy is the shipping companies. We must ensure our docks are replete with ships!"
- INDOLEM2_military_factories:0 "Industrial Improvements"
+ INDOLEM2_military_factories:0 "Military Factories"
  INDOLEM2_military_factories_desc:0 "The civil strife of recent times has proven that a strong military is necessary for safety, both from foreign powers but also from internal influences that would try to destroy our great nation."
  INDOLEM2_old_roads_new_airfields:0 "Old Roads, New Airfields"
  INDOLEM2_old_roads_new_airfields_desc:0 "Our infrastructure improvements have shown that some of our old roads are located in places that are not good for trade. By converting some of these old roads into airfields we can improve our military capabilities and bring development to all corners of our nation."
@@ -132,3 +132,9 @@
  INDOLEM2_join_kalari_desc:0 "We have made great strides to bring back the Mandalist system, but now we should take the final step; joining with our Kalari brethren into a single, true system of governance for all of the Indolemurian peoples."
  INDOLEM2_consolidate_orange_wave:0 "Consolidate the Orange Wave"
  INDOLEM2_consolidate_orange_wave_desc:0 "Mandalists, locally and abroad, must unite to drive off the foreign ideas and invaders who so blithely desecrate our lands. A united force of Mandalists will righteously bring this glorious future to our people!"
+ INDOLEM2_establish_secret_police:0 "Establish Secret Police"
+ INDOLEM2_establish_secret_police_desc:0 "Insurgents, rebels, rabblerousers, and political malcontents could bring ruin upon our nation. We must ensure that their poison is removed, and if it cannot be removed then at least contained."
+ INDOLEM2_control_unions:0 "Control the Unions"
+ INDOLEM2_control_unions_desc:0 "The unions are the perfect breeding ground for recruitment to anti-government factions. We must install proper leadership in the unions to ensure that they remain loyal and docile."
+ INDOLEM2_infiltrate_religious_groups:0 "Infiltrate Religious Groups"
+ INDOLEM2_infiltrate_religious_groups_desc:0 "We are loathe to involve our holy men and women in politics, but rebellion knows no decency. We must ensure the safety of our nation by preventing religious groups from becoming niduses of insurrection."
