--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -245,3 +245,4 @@
  VICTORY_POINTS_14456:0 "Pilesbury"
  VICTORY_POINTS_14903: "Sanggofesaran"
  VICTORY_POINTS_13583: "Pennston"
+ VICTORY_POINTS_12736: "Los Demonios"
