Mandalism Flags, localizations

--- a/localisation/AML_indolemurian_shared_tree_l_english.yml
+++ b/localisation/AML_indolemurian_shared_tree_l_english.yml
@@ -29,14 +29,14 @@
  LEM_spy_union_desc:0 "With the unions solidly under our control we can ensure the safety and prosperity of the nation."
  LEM_spy_religion:0 "Religious Group Infiltration"
  LEM_spy_religion_desc:0 "No corner of the nation is beyond our reach. By shining light even into the most sacred corners we can prevent the rise of rebel groups."
- LEM_famine:0 ""
- LEM_famine_desc:0 ""
- LEM_famine2:0 ""
- LEM_famine2_desc:0 ""
- LEM_factory_farm:0 ""
- LEM_factory_farm_desc:0 ""
- LEM_nonessential:0 ""
- LEM_nonessential_desc:0 ""
+ LEM_famine:0 "The Great Famine"
+ LEM_famine_desc:0 "The continent has been suffering under this famine for too long. We must put forth a united, strong effort in order to free our country of this terrible burden."
+ LEM_famine2:0 "Local Famine Efforts"
+ LEM_famine2_desc:0 "Our efforts have improved, but sadly not eliminated, the famine."
+ LEM_factory_farm:0 "Factory Farming"
+ LEM_factory_farm_desc:0 "If we convert some of our farms into a more mechanized, industrialized form we can increase their output drastically."
+ LEM_nonessential:0 "Non-Essential Factory Conversion"
+ LEM_nonessential_desc:0 "By forcing the factories that produce non-essential goods to work for the nation we can help alleviate the suffering of the people."
  
  
  
