--- a/localisation/KUM_l_english.yml
+++ b/localisation/KUM_l_english.yml
@@ -4,6 +4,7 @@
  develop_demistalavai_industrial_district:0 "Expand the Vendurutama Industrial Area"
  develop_demistalavai_industries:0 "Build Steel Mills in Vendurutama"
  industrial_district_developed:0 "Industrial District Developed"
+ KUM_trial_error:0 "Air Force Learning"
  KUM_stop_support:0 "Stop Supporting the Pantiyans"
  KUM_stop_support_desc:0 "We have been antagonizing France for many years due to our support of the Pantiyan rebels. In the interest of peace, and potentially the good will of a very large trade partner, we must inform the Pantiyans that we will no longer support a Pantiyan homeland."
  KUM_closer_french_ties:0 "Closer French Ties"
