--- a/localisation/KUM_l_english.yml
+++ b/localisation/KUM_l_english.yml
@@ -1,10 +1,31 @@
 ﻿l_english:
+ #Decisions
  develop_single_chakkrumivan:0 "Develop Iron Mines in Chakkrumivan"
  develop_repeatable_demistalavai:0 "Develop Steel Refineries in Demistalavai"
  develop_demistalavai_industrial_district:0 "Expand the Vendurutama Industrial Area"
  develop_demistalavai_industries:0 "Build Steel Mills in Vendurutama"
  industrial_district_developed:0 "Industrial District Developed"
- blow_the_works:0 "Destroy Boranepateran Infrastructure"
+ KUM_blow_the_works:0 "Free Pantiya Forces"
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ #foci
  KUM_trial_error:0 "Air Force Learning"
  KUM_stop_support:0 "Stop Supporting the Pantiyans"
  KUM_stop_support_desc:0 "We have been antagonizing France for many years due to our support of the Pantiyan rebels. In the interest of peace, and potentially the good will of a very large trade partner, we must inform the Pantiyans that we will no longer support a Pantiyan homeland."
