Loading tip for British Lemuria
Synthor liked it

--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -35,3 +35,4 @@
  LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
  LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
+ LOADING_TIP_123:0 "\"When death stares at me, I shouldn't close my eyes and pray for it, I should smirk at the very concept of it and i owe those countless soldiers an answer cause of my gambles, they have faced many and i am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria " #Synthor liked it
