KLK chain of events (kinda)

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -192,6 +192,12 @@
  KLK_militia_idea:0 "Large Militias"
  KLK_militia_idea_2:0 "Large Militias"
  KLK_stal_idea:0 "Secret Police"
+ KLK_crippled_economy:0 "Crippled Economy"
+ 
+ KLK_mandalist_guerrillas_debuff:0 "Guerrillas in the East"
+ KLK_mandalist_guerrillas_debuff_0:0 "Guerrillas Gaining Land"
+ KLK_mandalist_guerrillas_debuff_1:0 "Government Challenged"
+ KLK_mandalist_guerrillas_debuff_2:0 "Government Threatened"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
@@ -204,12 +210,59 @@
  KLK_hiring:0 "Currently Hiring Mercenaries"
  KLK_mercenary_flag:0 "Mercenaries Available"
  KLK_deep_state_flag:0 "Deep State"
- KLK_anti_mandalist_decisions:0 "Anti-Mandalist Campaign"
+ KLK_anti_mandalist_decisions:0 "Rise of Mandalism"
  KLK_anti_mandalism_flag:0 "Anti-Mandalist Operations"
  KLK_attack_mandalists:0 "Persecute Mandalists"
  KLK_ongoing_operation:0 "Ongoing Operation"
  KLK_mercenary_decisions:0 "Mercenaries for Hire"
  KLK_hire_infantry:0 "Hire an Infantry Division"
  KLK_hire_mech:0 "Hire a Mechanized Division"
- KLK_regain_land:0 "Regain the Mandalist Territory"
+ KLK_hire_manpower:0 "Fill the Ranks with Mercenaries"
  develop_repeatable_velaccamaveiyil:0 "Develop Iron Mines in Velaccamaveiyil"
+ 
+ KLK_regain_land1000:0 "Strike Mandalist Base"
+ KLK_mandalist_offensive1:0 "Militants Preparing an Offensive"
+ KLK_mandalist_offensive2:0 "Militants Preparing an Offensive"
+ KLK_mandalist_offensive3:0 "Militants Preparing an Offensive"
+ KLK_mandalist_offensive4:0 "Militants Preparing an Offensive"
+ KLK_lose_land1:0 "Mandalist Offensive in Daimetarha"
+ KLK_lose_land2:0 "Mandalist Offensive in Enmagrame"
+ KLK_lose_land3:0 "Mandalist Offensive in Itoemurea"
+ KLK_lose_land4:0 "Mandalist Offensive in Mulatavai"
+ KLK_assassination_reduce_cost:0 "Gaining Intel about the Mandalist Leaders"
+ KLK_assassination_infiltrate:0 "Infiltrate Mandalist Areas"
+ KLK_reduce_cost:0 "§gReduces the cost of assassination decisions§"
+ KLK_assassination_1:0 "Kill Local Leader"
+ KLK_assassination_2:0 "Kill Mandalist General"
+ KLK_assassination_3:0 "Kill Asanvarinnu"
+ 
+ 
+ ####### events
+ KLK_test:0 "Mandalists Reorganize"
+ mandalism.1.t:0 "Mandalists Advance in Daimetarha"
+ mandalism.1.d:0 "desqription"
+ mandalism.1.a:0 "FUG :D"
+ mandalism.2.t:0 "Mandalists Advance in Enmagrame"
+ mandalism.2.d:0 "desqription"
+ mandalism.2.a:0 "FUG :DDD"
+ mandalism.3.t:0 "Mandalists Advance in Itoemurea"
+ mandalism.3.d:0 "desqription"
+ mandalism.3.a:0 "FUG :DDDDD"
+ mandalism.4.t:0 "Mandalists Advance in Mulatavai"
+ mandalism.4.d:0 "desqription"
+ mandalism.4.a:0 "FUG :DDDDDDD"
+ mandalism.5.t:0 "ULTIMATUM"
+ mandalism.5.d:0 "GIVE UB NOW LOL"
+ mandalism.5.a:0 "K DEN (becomes mandalist)"
+ mandalism.5.b:0 "LOL NOPE (civil war)"
+ mandalism.6.t:0 "Mandalist Leader Killed"
+ mandalism.6.d:0 "YAY"
+ mandalism.6.a:0 "burn in hell X--DDD"
+ mandalism.7.t:0 "Force Conscription"
+ mandalism.7.d:0 "NEED MORE PPL"
+ mandalism.7.a:0 "AIGHT, LETS DO THIS = cripple economy lol"
+ mandalism.7.b:0 "NOT DOING THIS"
+ mandalism.8.t:0 "Mandalists Defeated"
+ mandalism.8.d:0 "YAY"
+ mandalism.8.a:0 "that's all, folks :DDDD"
+ 
