--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -240,29 +240,29 @@
  ####### events
  KLK_test:0 "Mandalists Reorganize"
  mandalism.1.t:0 "Mandalists Advance in Daimetarha"
- mandalism.1.d:0 "desqription"
- mandalism.1.a:0 "FUG :D"
+ mandalism.1.d:0 "The Mandalist rebels are organized and have already begun to field military units. They are capturing territory despite our best efforts."
+ mandalism.1.a:0 "Curses!"
  mandalism.2.t:0 "Mandalists Advance in Enmagrame"
- mandalism.2.d:0 "desqription"
- mandalism.2.a:0 "FUG :DDD"
+ mandalism.2.d:0 "The cursed Mandalists have not stopped after capturing the entire province of Daimetarha. They've continued their advance toward the western portions of the Kalari Kingdom."
+ mandalism.2.a:0 "Unacceptable!"
  mandalism.3.t:0 "Mandalists Advance in Itoemurea"
- mandalism.3.d:0 "desqription"
- mandalism.3.a:0 "FUG :DDDDD"
+ mandalism.3.d:0 "We've lost so much territory to the Mandalists. If we don't act soon there will be no area left under the control of the rightful government."
+ mandalism.3.a:0 "We must do something!"
  mandalism.4.t:0 "Mandalists Advance in Mulatavai"
- mandalism.4.d:0 "desqription"
- mandalism.4.a:0 "FUG :DDDDDDD"
+ mandalism.4.d:0 "The Mandalists are boldly striking into the province of Mulatavai. Our retreat after retreat is emboldening them. Soon they will have us surrounded!"
+ mandalism.4.a:0 "Unbelievable!"
  mandalism.5.t:0 "ULTIMATUM"
- mandalism.5.d:0 "GIVE UB NOW LOL"
- mandalism.5.a:0 "K DEN (becomes mandalist)"
- mandalism.5.b:0 "LOL NOPE (civil war)"
+ mandalism.5.d:0 "The Mandalist leadership, now in control of the majority of our nation, has sent an ultimatum: we are to lay down our arms or they will attack the capital whatever the cost to our people."
+ mandalism.5.a:0 "For the good of the people we submit."
+ mandalism.5.b:0 "NEVER! (civil war)"
  mandalism.6.t:0 "Mandalist Leader Killed"
- mandalism.6.d:0 "YAY"
- mandalism.6.a:0 "burn in hell X--DDD"
- mandalism.7.t:0 "Force Conscription"
- mandalism.7.d:0 "NEED MORE PPL"
- mandalism.7.a:0 "AIGHT, LETS DO THIS = cripple economy lol"
- mandalism.7.b:0 "NOT DOING THIS"
+ mandalism.6.d:0 "In a daring pre-dawn raid our forces stormed the compound where that villain Asanvarinnu has been hiding. They gunned him down like the worthless scum he was."
+ mandalism.6.a:0 "Good Riddance!"
+ mandalism.7.t:0 "Enforced Conscription"
+ mandalism.7.d:0 "The enormous amount of land now under the control of the Mandalists is beyond unacceptable... it is dangerous! We know that it will hurt our economy, but perhaps we can start conscripting the workers from our factories..."
+ mandalism.7.a:0 "Send out the recruiters"
+ mandalism.7.b:0 "No, there must be another way."
  mandalism.8.t:0 "Mandalists Defeated"
- mandalism.8.d:0 "YAY"
- mandalism.8.a:0 "that's all, folks :DDDD"
+ mandalism.8.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
+ mandalism.8.a:0 "A great day for Kalari!"
  
