--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -551,8 +551,8 @@
  AWA_democratic_ADJ:0 "Awaruruan"
  AWA_neutrality_ADJ:0 "Awaruruan"
  AWA_communism_ADJ:0 "Awaruruan"
- TAH_fascism:0 "Tahiti"
- TAH_fascism_DEF:0 "Tahiti"
+ TAH_fascism:0 "Nationalist Tahiti"
+ TAH_fascism_DEF:0 "Nationalist Tahiti"
  TAH_democratic:0 "Tahiti"
  TAH_democratic_DEF:0 "Tahiti"
  TAH_neutrality:0 "Tahiti"
