--- a/localisation/KUM_l_english.yml
+++ b/localisation/KUM_l_english.yml
@@ -12,21 +12,20 @@
  KUM_leaky_engine:0 "Inefficient Heavy Engines"
  capitalists_win:0 "Capitalist Victory"
  mandalists_win:0 "Mandalist Victory"
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+ blow_boranepatera_infra:0 "Sabotage Boranepatera Infrastructure"
+ blow_manparagatu_infra:0 "Sabotage Manparagatu Infrastructure"
+ blow_lower_thansava_infra:0 "Sabotage Lower Thansava Infrastructure"
+ blow_upper_thansava_infra:0 "Sabotage Upper Thansava Infrastructure"
+ blow_ratulismara_infra:0 "Sabotage Ratulismara Infrastructure"
+ blow_pant_kobaul_infra:0 "Sabotage Southern Pantiyan Infrastructure"
+ blow_boranepatera_civil:0 "Sabotage Boranepatera Civilian Factories"
+ blow_manparagatu_civil:0 "Sabotage Manparagatu Civilian Factories"
+ blow_lower_thansava_civil:0 "Sabotage Lower Thansava Civilian Factories"
+ blow_upper_thansava_civil:0 "Sabotage Upper Thansava Civilian Factories"
+ blow_ratulismara_civil:0 "Sabotage Ratulismara Civilian Factories"
+ blow_boranepatera_mil:0 "Sabotage Boranepatera Military Factories"
+ blow_manparagatu_mil:0 "Sabotage Manparagatu Military Factories"
+ blow_manparagatu_dock:0 "Sabotage Manparagatu Dockworks"
  
  
  
